Avoid title overlap

--- a/src/resources/beautify.css
+++ b/src/resources/beautify.css
@@ -208,6 +208,7 @@ header a {
     box-shadow: 0 2px 15px 2px var(--border-color);
     padding: 0px;
     width: 180px;
+    font-size: 13px;
 }
 
 .drawflow .drawflow-node.selected {
@@ -219,6 +220,7 @@ header a {
 
 .drawflow .drawflow-node.selected .title-box {
     color: #22598c;
+    font-size: 13px;
     /*border-bottom: 1px solid #4ea9ff;*/
 }
 
@@ -265,11 +267,13 @@ header a {
 .drawflow-node .title-box {
     height: 34px;
     line-height: 34px;
+    font-size: 13px;
     background: var(--background-box-title);
     border-bottom: 1px solid #e9e9e9;
     border-radius: 4px 4px 0px 0px;
     padding-left: 10px;
     padding-right: 15px;
+    overflow: hidden;
 }
 
 .drawflow-node .title-box-min {
